--- a/store-app/tsconfig.json
+++ b/store-app/tsconfig.json
@@ -34,6 +34,9 @@
       ],
       "layouts:*": [
         "src/layouts/*.astro"
+      ],
+      "store:*": [
+        "src/store/*.ts"
       ]
     }
   },
